--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p> This is my official portfolio website to show all
             <br> Detail and work exprins  web development
         </p>
-        <a href="cv.pdf" >DOWNLOAD CV</a>
+        <a href="CV.pdf" >DOWNLOAD CV</a>
     </div>
     <div class="images"> 
         <!-- <img src="logo-dark.png" class="shape">  -->
